2005-04-18  Ethan Merritt  <merritt@u.washington.edu>

	* src/save.c (save_linetype) src/save.h src/show.c:    Code cleanup.
	Provide a single routine to handle all the places that dump information
	from a structure of type lp_style_type. This cleans up 9 call sites in
	save.c and 9 more in show.c, many of which were not handling the recent
	extensions to line types in general.  The grid linetypes were not being
	saved at all.

	* src/set.c (set_key): Fix parsing bug that caused next item after
	'set key title "Foo"' to be ignored.

	* src/graphics.c (boundary): Fix for bug #1184989. Explicitly test for
	absence of any plot titles when sizing the key (avoid divide-by-zero).

2005-04-18  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/fig.trm (FIG_set_color): Support for "textcolor lt".

2005-04-16  Juergen Wieferink <wieferink@freenet.de>

	* term/pslatex.trm: Clean up macro definitions written to
	output file of 'set term epslatex'. 
	Fixes bug #1162038 "Wrong textcolor in epslatex terminal".

2005-04-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_border): Fix bug in new parsing loop.

2005-04-14  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/gadgets.c src/gadgets.h
	src/graphics.c (do_plot) src/save.c (save_set_all) 
	src/set.c (set_border) src/show.c (show_border):
	Make parsing of 'set border' options independent of their order.
	New option 'set border {front|back}'.

2005-04-11  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm: Fix for bug #1180853, arrowheads drawn in wrong
	color if the arrow body has a specific line style or color.

2005-04-10  Ethan Merritt  <merritt@u.washington.edu>

	* demo/histograms.dem:  Correct behaviour of the demo depended
	on a bug in the xrange code.  Now that the bug is fixed (26-Mar-05)
	the demo needs to be fixed also (don't set xrange to [0:*]).

2005-04-08  Ethan Merritt  <merritt@u.washington.edu>

	* Makefile.am configure.in:  Continued attempts to make configure