@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: term.c,v 1.104 2005/03/25 00:34:14 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: term.c,v 1.105 2005/03/25 05:01:11 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - term.c */
@@ -758,7 +758,7 @@ term_reset()
 
 #ifdef USE_MOUSE
     /* Make sure that ^C will break out of a wait for 'pause mouse' */
-    paused_for_mouse = FALSE;
+    paused_for_mouse = 0;
 #endif
 
     if (!term_initialised)
